--- a/jitter-free-membership.tex
+++ b/jitter-free-membership.tex
@@ -1163,7 +1163,7 @@ d_{\mathbb A} & a_0 \in q' \\
 %
 \end{cases}
 \]
-so that $\sum_{a \in q'} w'(a) = \sum_{a \in q} w(a) + d_{q'}$.
+so that $\sum_{a \in q'} w'(a) = \sum_{a \in q'} w(a) + d_{q'}$.
 %
 Then
 \begin{gather*}
