--- a/jitter-free-membership.tex
+++ b/jitter-free-membership.tex
@@ -1032,7 +1032,7 @@ with the lexicographic order.
 
 
 \appendices
-\section{Invariants preserved by the Synod algorithm}
+\section{Consistency of the Synod algorithm}
 \label{synod-safety}
 
 The consistency property of the Synod algorithm is derived from the following
@@ -1129,7 +1129,7 @@ required.  \end{proof}
 
 % you can choose not to have a title for an appendix
 % if you want by leaving the argument blank
-\section{Invariants preserved by the Paxos algorithm}
+\section{Consistency of the Paxos algorithm}
 
 \begin{theorem}\label{paxos-safety-theorem} If $\chosen{i}{p_1}$ and
 $\chosen{i}{p_2}$ then $v_i(p_1) = v_i(p_2)$.  \end{theorem}
