Copy-paste error

--- a/jitter-free-membership.tex
+++ b/jitter-free-membership.tex
@@ -790,11 +790,11 @@ w(a) > \sum_{a \in \mathbb A} w(a) \right\}.\] If $w(a) = 0$ for all $a$ then
 $w$ is said to be \textit{weightless} and $M(w) = \varnothing$.
 
 A sequence $w_0, w_1, \ldots$ of weight functions can be used to define the
-sequence of memberships used by a  a value for instance $j$ may be proposed.
-Recall that this sequence of memberships must satisfy the consecutive epoch
-intersection property: if $q^\textrm{I} \in M(w_e) \cup M(w_{e-1})$ and
-$q^\textrm{II} \in M(w_e)$ then it is necessary that $q^\textrm{I} \cap
-q^\textrm{II} \ne \varnothing$. There are three simple ways to ensure this:
+sequence of memberships used by a cluster.  Recall that this sequence of
+memberships must satisfy the consecutive epoch intersection property: if
+$q^\textrm{I} \in M(w_e) \cup M(w_{e-1})$ and $q^\textrm{II} \in M(w_e)$ then
+it is necessary that $q^\textrm{I} \cap q^\textrm{II} \ne \varnothing$. There
+are three simple ways to ensure this:
 
 \begin{enumerate}
 
