--- a/jitter-free-membership.tex
+++ b/jitter-free-membership.tex
@@ -811,8 +811,7 @@ ensure this:
 
 \item If $w_{e-1}$ and $w_e$ differ by a constant factor, in the sense that
 there are positive integers $m$ and $n$ such that $m w_{e-1}(a) = n w_e(a)$ for
-all $a$, then $M(w_{e-1}) = M(w_e)$ and hence the property holds by corollary
-\ref{weights-equal}.
+all $a$, then $M(w_{e-1}) = M(w_e)$ and hence the property holds.
 
 \item Finally, by theorem \ref{weights-nearly-equal} if $w_{e-1}$ and $w_e$
 differ by at most $1$ at at most one node then the property holds.
