--- a/jitter-free-membership.tex
+++ b/jitter-free-membership.tex
@@ -889,14 +889,15 @@ To control this sitation, the cluster may be divided into \textit{zones}, where
 the nodes within a single zone may share infrastructure but failures in
 different zones can be considered to be independent.  The four-node approach
 described above is only safe if each node is in a different zone: if any two of
-them share infrastructure then the system is at risk in epoch $w_{e+1}$. On the
-other hand, arranging for four zones is likely to be much harder than arranging
-for three\footnote{For instance, at time of writing, only one Amazon Web
-Services region (\texttt{us-east-1}) has four independent zones, whereas four
-of them have three: \texttt{ap-southeast-2}, \texttt{eu-west-1},
-\texttt{sa-east-1} and \texttt{us-west-2}.}.  Fortunately, it is possible to
-safely replace a node within a single zone $z_{\textrm{maint}}$ using only
-three zones and the following sequence of operations.
+them share infrastructure then the system is at risk of a zone-wide failure in
+epoch $w_{e+1}$. On the other hand, arranging for four zones is likely to be
+much harder than arranging for three\footnote{For instance, at time of writing,
+  only one Amazon Web Services region (\texttt{us-east-1}) has four independent
+zones, whereas four of them have three: \texttt{ap-southeast-2},
+\texttt{eu-west-1}, \texttt{sa-east-1} and \texttt{us-west-2}.}.  Fortunately,
+it is possible to safely replace a node within a single zone
+$z_{\textrm{maint}}$ using only three zones and the following sequence of
+operations.
 \[\begin{array}{rcccc}
 \textrm{zone}&z_{\textrm{maint}}&z_{\textrm{maint}}&z_1&z_2\\
 \textrm{node}&a_{\textrm{old}}&a_{\textrm{new}}&a_1&a_2\\
